docs: adiciona readme com instruções do projeto
